--- a/README.en
+++ b/README.en
@@ -24,9 +24,14 @@ In 'listen' section one should add:
 
 -------------------------------------------------------------------------------
 
-% External Logger
-    {8887, ejabberd_service, [{ip, {127, 0, 0, 1}},
-			    {access, all},
-                            {hosts, ["alice.somehost.somedomain"], [{password, "0123456789abcdef"}]}]}
+### External Logger
+  -
+    port: 8887
+    ip: "127.0.0.1"
+    access: all
+    module: ejabberd_service
+    hosts:
+      "alice.somehost.somedomain":
+        password: "0123456789abcdef"
 
 -------------------------------------------------------------------------------
